# ugly-duckling

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  Architecture.md  CMakeLists.txt  Common.cmake  Components.cmake  DeviceCommon.cmake  ESP32-S3 sleep power consumption.md  Peripherals.md  README.md  clang-tidy-fixes.yaml  diagram.json  esp_idf_project_configuration.json  fix-compile-db.py  generate-clang-tidy-compile-db.py  idf-docker.py  idfx.py  lookup-backtrace.py  partitions.csv  pio-docker  platformio.ini  pytest.ini  sdkconfig.debug.defaults  sdkconfig.defaults  sdkconfig.mk4.defaults  site.url  wokwi.toml
components/: CMakeLists.txt
components/devices/: CMakeLists.txt  Device.hpp
components/devices/devices/: DeviceConfiguration.hpp  DeviceDefinition.hpp  DeviceSettings.hpp  DeviceTelemetry.hpp  UglyDucklingMk4.hpp  UglyDucklingMk5.hpp  UglyDucklingMk6.hpp  UglyDucklingMk7.hpp  UglyDucklingMk8.hpp  UglyDucklingMkX.hpp
components/functions/: CMakeLists.txt
components/functions/functions/: Function.hpp  Plot.hpp  PlotController.hpp  ScheduledTransitionLoop.hpp
components/functions/functions/chicken_door/: ChickenDoor.hpp
components/functions/functions/plot_controller/: PlotController.hpp
components/kernel/: BatteryManager.hpp  BootClock.hpp  CMakeLists.txt  Component.hpp  Concurrent.hpp  Configuration.hpp  Console.hpp  CrashManager.hpp  DebugConsole.hpp  EspException.hpp  Factory.hpp  FileSystem.hpp  HttpUpdate.hpp  I2CManager.hpp  KernelStatus.hpp  Log.hpp  LogJson.hpp  MacAddress.hpp  Manager.hpp  MovingAverage.hpp  Named.hpp  NetworkUtil.hpp  NvsStore.hpp  PcntManager.hpp  Pin.hpp  PowerManager.hpp  PulseCounter.hpp  PwmManager.hpp  ShutdownManager.hpp  State.cpp  State.hpp  StateManager.hpp  Strings.hpp  Task.hpp  Telemetry.hpp  Time.hpp  Watchdog.hpp  idf_component.yml
components/kernel/drivers/: BatteryDriver.hpp  Bq27220Driver.hpp  Drv8801Driver.hpp  Drv8833Driver.hpp  Drv8848Driver.hpp  Drv8874Driver.hpp  Ina219Driver.hpp  LedDriver.hpp  MdnsDriver.hpp  MotorDriver.cpp  MotorDriver.hpp  RtcDriver.hpp  SwitchManager.hpp  WiFiDriver.hpp
components/kernel/mqtt/: MqttDriver.hpp  MqttLog.hpp  MqttRoot.hpp  MqttTelemetryPublisher.hpp  PendingMessages.hpp
components/kernel/test/: CMakeLists.txt  ConfigurationTest.cpp  MovingAverageTest.cpp  Strings.test.cpp  WatchdogTest.cpp
components/peripherals/: CMakeLists.txt
components/peripherals-api/: CMakeLists.txt
components/peripherals-api/peripherals/api/: IDoor.hpp  IFlowMeter.hpp  ILightSensor.hpp  IPeripheral.hpp  IPeripheralManager.hpp  ISoilMoistureSensor.hpp  ITemperatureSensor.hpp  IValve.hpp  TargetState.hpp  Units.hpp
components/peripherals/functions/: Function.hpp
components/peripherals/peripherals/: I2CConfig.hpp  I2CSettings.hpp  Motorized.hpp  Motors.cpp  Motors.hpp  Peripheral.hpp  PeripheralException.hpp  SinglePinDeviceConfig.hpp  SinglePinSettings.hpp
components/peripherals/peripherals/analog_meter/: AnalogMeter.hpp  AnalogMeterComponent.hpp
components/peripherals/peripherals/chicken_door/: ChickenDoor.hpp
components/peripherals/peripherals/door/: Door.hpp
components/peripherals/peripherals/environment/: Ds18B20SoilSensor.hpp  Environment.hpp  Fdc1004SoilMoistureSensor.hpp  KalmanFilterSoilSensor.hpp  NtcTemperatureSensor.hpp  Sht2xComponent.hpp  Sht2xSensor.hpp  Sht3xComponent.hpp  Sht3xSensor.hpp  SoilMoistureSensor.hpp
components/peripherals/peripherals/fence/: ElectricFenceMonitor.hpp
components/peripherals/peripherals/flow_control/: FlowControl.hpp
components/peripherals/peripherals/flow_meter/: FlowMeter.hpp  FlowMeterComponent.hpp  FlowMeterConfig.hpp
components/peripherals/peripherals/light_sensor/: AnalogLightSensor.hpp  Bh1750.hpp  LightSensor.hpp  Tsl2591.hpp
components/peripherals/peripherals/multiplexer/: Xl9535.hpp
components/peripherals/peripherals/valve/: Valve.hpp  ValveComponent.hpp  ValveConfig.hpp  ValveControlStrategy.hpp  (+5 more)
components/peripherals/test/: CMakeLists.txt  ValveSchedulerTest.cpp
components/unit-test-support/: FakeLog.hpp
components/utils/: CMakeLists.txt
components/utils/test/: CMakeLists.txt  FakeLog.hpp
components/utils/utils/: Chrono.hpp  DebouncedMeasurement.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/devices/: Device.hpp  DeviceConfiguration.hpp  DeviceDefinition.hpp  Pin.hpp  UglyDucklingMk4.hpp  UglyDucklingMk5.hpp  UglyDucklingMk6.hpp  UglyDucklingMk7.hpp  UglyDucklingMk8.hpp
main/kernel/: BatteryManager.hpp  BootClock.hpp  Command.hpp  Component.hpp  Concurrent.hpp  Configuration.hpp  Console.hpp  CrashManager.hpp  DebugConsole.hpp  FileSystem.hpp  HttpUpdate.hpp  I2CManager.hpp  Kernel.hpp  KernelStatus.hpp  Log.hpp  MovingAverage.hpp  Named.hpp  NvsStore.hpp  PcntManager.hpp  Pin.hpp  PowerManager.hpp  PulseCounter.hpp  PwmManager.hpp  Service.hpp  ShutdownManager.hpp  SleepManager.hpp  State.cpp  State.hpp  StateManager.hpp  Strings.hpp  Task.hpp  Telemetry.hpp  Watchdog.hpp
main/kernel/drivers/: BatteryDriver.hpp  Bq27220Driver.hpp  Drv8801Driver.hpp  Drv8833Driver.hpp  Drv8874Driver.hpp  LedDriver.hpp  MdnsDriver.hpp  MqttDriver.hpp  RtcDriver.hpp  SwitchManager.hpp  WiFiDriver.hpp
main/kernel/mqtt/: MqttDriver.hpp  MqttLog.hpp  MqttRoot.hpp  MqttTelemetryPublisher.hpp
main/peripherals/: I2CConfig.hpp  Motorized.hpp  Peripheral.hpp  SinglePinDeviceConfig.hpp
main/peripherals/chicken_door/: ChickenDoor.hpp
main/peripherals/environment/: Ds18B20SoilSensor.hpp  Environment.hpp  Sht2xComponent.hpp  Sht31Component.hpp  Sht3xComponent.hpp  SoilMoistureSensor.hpp
main/peripherals/fence/: ElectricFenceMonitor.hpp
main/peripherals/flow_control/: FlowControl.hpp
main/peripherals/flow_meter/: FlowMeter.hpp  FlowMeterComponent.hpp  FlowMeterConfig.hpp
main/peripherals/light_sensor/: Bh1750.hpp  LightSensor.hpp  Tsl2591.hpp
main/peripherals/multiplexer/: Xl9535.hpp
main/peripherals/valve/: Valve.hpp  ValveComponent.hpp  ValveConfig.hpp  ValveScheduler.hpp
tools/kalman/: CMakeLists.txt  README.md  idle-moisture-1.csv  idle-moisture-2.csv  main.cpp  query.sql
(+293 files in other folders)
